--- a/remind-alerter/src/main/resources/application-mysql.properties
+++ b/remind-alerter/src/main/resources/application-mysql.properties
@@ -1,14 +1,17 @@
 # Db Common setting
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/RemindAlertDB?autoReconnect=true&useSSL=false
-spring.datasource.username=alert
-spring.datasource.password=alert
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/remindAlertDB?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.datasource.continue-on-error=true
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false 
