--- a/remind-alerter/src/main/resources/application.properties
+++ b/remind-alerter/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.servlet.context-path=/remindalerter
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
-spring.profiles.active=h2
+spring.profiles.active=mysql
