--- a/remind-alerter/pom.xml
+++ b/remind-alerter/pom.xml
@@ -77,6 +77,13 @@
 		   <artifactId>bootstrap</artifactId>
 		   <version>4.0.0</version>
 		</dependency>
+		 
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>3.3.1</version>
+		</dependency>
+		
 		<dependency>
 		   <groupId>javax.servlet</groupId>
 		   <artifactId>jstl</artifactId>
