--- a/remind-alerter/src/main/resources/application-mysql.properties
+++ b/remind-alerter/src/main/resources/application-mysql.properties
@@ -4,10 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-spring.datasource.continue-on-error=true
-spring.datasource.testWhileIdle = true
+#spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#spring.datasource.continue-on-error=true
+#spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
